--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -3,7 +3,7 @@ $bg-div: #F3FCF0;
 
 // Jumbotron colors
 $anime-color: #81D2C7;
-$gintama-color: #95B8D1;
+$gintama-color: #90C2E7;
 
 $jumbo-colors: $anime-color, $gintama-color;
 
