--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -22,5 +22,24 @@
     min-height: 700px;
   }
 
+  #gintama-div {
+    min-height: 600px;
+    font-size: 20px;
+    font-weight: bold;
+
+    strong {
+      font-size: 25px;
+    }
+
+    .poop {
+      font-size: 30px;
+    }
+
+    h3 {
+      text-align: center;
+    }
+
+  }
+
 
 }
