--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -1,6 +1,11 @@
 // Div colors
 $bg-div: #F3FCF0;
 
+// Input colors
+$count-input-color: #72A1E5;
+$count-background: #E6E6E6;
+
+
 // Jumbotron colors
 $anime-color: #81D2C7;
 $gintama-color: #90C2E7;
