--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -1,14 +1,14 @@
 // Div colors
 $bg-div: #F3FCF0;
+$gintama-bg: #F5F5F5;
 
 // Input colors
 $count-input-color: #72A1E5;
-$count-background: #E6E6E6;
 
-
-// Jumbotron colors
+// Jumbotron
 $anime-color: #81D2C7;
 $gintama-color: #90C2E7;
+$jumbo-padding: 8em;
 
 $jumbo-colors: $anime-color, $gintama-color;
 
