--- a/app/css/main.css
+++ b/app/css/main.css
@@ -13,16 +13,21 @@
 .container-fluid .first-graph-div {
   max-width: 900px;
   overflow: scroll;
-  min-height: 700px; }
+  min-height: 725px; }
 
 .container-fluid #gintama-div {
-  min-height: 600px;
   font-size: 20px;
   font-weight: 400; }
+  .container-fluid #gintama-div #gintama-list-div {
+    overflow-y: scroll;
+    background: #F5F5F5;
+    min-height: 600px;
+    max-height: 600px;
+    border-radius: 4px; }
   .container-fluid #gintama-div #count-input {
     border: none;
     border-bottom: 2px solid #72A1E5;
-    background: #E6E6E6;
+    background: #F5F5F5;
     width: 50px;
     text-align: center; }
   .container-fluid #gintama-div strong {
