--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -25,6 +25,7 @@
   #gintama-div {
     font-size: 20px;
     font-weight: 400;
+    min-height: 750px;
 
     #gintama-list-div {
       overflow-y: scroll;
@@ -32,6 +33,10 @@
       min-height: 600px;
       max-height: 600px;
       border-radius: 4px;
+
+      ol {
+        color: $gintama-text-color
+      }
     }
 
     #count-input {
