Added HTML for Meteorite Landings.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5,7 +5,7 @@
   background-color: #90C2E7; }
 
 .jumbotron-3 {
-  background-color: #070600; }
+  background-color: #B79CED; }
 
 .jumbotron {
   text-align: center;
