--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -11,7 +11,7 @@ $count-input-color: #72A1E5;
 // Jumbotron
 $anime-color: #81D2C7;
 $gintama-color: #90C2E7;
-$space-color: #070600;
+$space-color: #B79CED;
 $jumbo-padding: 8em;
 
 $jumbo-colors: $anime-color, $gintama-color, $space-color;
