--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -35,7 +35,7 @@
       border-radius: 4px;
 
       ol {
-        color: $gintama-text-color
+        color: $gintama-text-color;
       }
     }
 
