--- a/app/css/main.css
+++ b/app/css/main.css
@@ -43,3 +43,6 @@
     font-size: 30px; }
   .container-fluid #gintama-div h3 {
     text-align: center; }
+
+.container-fluid .second-graph-div {
+  height: 700px; }
