--- a/app/scss/partials/_base.scss
+++ b/app/scss/partials/_base.scss
@@ -16,3 +16,4 @@ $jumbo-padding: 8em;
 
 $jumbo-colors: $anime-color, $gintama-color, $space-color;
 $default-white: #FCF7FF;
+$default-black: #252627;
